--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </a>
                    </div>
                    <div class="resume">
-                    <p><button class="btn butt" onclick="location.href='https://drive.google.com/file/d/14g6g-AG5m07cvGElXfmaJ2h57rTq-X_T/view?usp=sharing';">Download Resume</button></p>
+                    <p><button class="btn butt" onclick="https://drive.google.com/file/d/1NXGnqXpHyrgQJzgi2DLVazVFfb0fTHW_/view?usp=sharing">Download Resume</button></p>
                  </div>
             </div>
 
