--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
                     </a>
                    </div>
                    <div class="resume">
-                    <p><button class="btn butt" onclick='https://drive.google.com/file/d/1NXGnqXpHyrgQJzgi2DLVazVFfb0fTHW_/view?usp=sharing'>Download Resume</button></p>
+                    <p>
+                      <button class="btn butt" onclick="window.open('https://drive.google.com/file/d/1NXGnqXpHyrgQJzgi2DLVazVFfb0fTHW_/view?usp=sharing', '_blank')">Download Resume</button>
+                    </p>
+
                  </div>
             </div>
 
