--- a/index.html
+++ b/index.html
@@ -82,11 +82,18 @@
                       </svg>
                     </a>
                    </div>
-                   <div class="resume">
-                    <p>
-                      <button class="btn butt" onclick="window.open('https://drive.google.com/file/d/1NXGnqXpHyrgQJzgi2DLVazVFfb0fTHW_/view?usp=sharing', '_blank')">Download Resume</button>
-                    </p>
+                    <div class="resume">
+                          <p>
+                            <a href="https://drive.google.com/file/d/1NXGnqXpHyrgQJzgi2DLVazVFfb0fTHW_/view?usp=sharing" 
+                               class="btn butt" 
+                               target="_blank" 
+                               rel="noopener noreferrer">
+                               Download Resume
+                            </a>
+                          </p>
+                  </div>
 
+                   
                  </div>
             </div>
 
